<resources>
    <string name="app_name">DTPCKase</string>
    <string name="intro_title">Encuentra tu Estilo!<font color="#6033ba">\n Un mundo de skins</font> </string>
    <string name="intro_text">Personaliza toda tu Setup\nY Sé Único</string>
    <string name="intro_signin">Ya tienes una cuenta? <font color="#6033ba">Inicia Sesión</font></string>
    <string name="button_play">Play</string>
    <string name="sign_slogan">Tu Pc,Tu Estilo</string>
    <string name="sign_registrate">Regístrate Aquí</string>
    <string name="slogan_main">Explora la mejor selección de skins</string>
    <string name="direccion_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies malesuada vulputate. Integer imperdiet, ex vel ullamcorper auctor, augue enim hendrerit sapien, nec porttitor sapien purus gravida odio. Sed consectetur erat sed neque porttitor, vel scelerisque elit sollicitudin. Duis scelerisque, mi ac molestie pellentesque, ante mauris posuere mauris, at molestie nisl tellus quis risus.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>